--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@codemirror/highlight": "github:codemirror/highlight",
+    "@codemirror/history": "github:codemirror/history",
+    "@codemirror/lang-markdown": "github:codemirror/lang-markdown",
+    "@codemirror/language-data": "github:codemirror/language-data",
+    "@codemirror/matchbrackets": "github:codemirror/matchbrackets",
     "@tauri-apps/api": "^1.0.2",
+    "@uiw/codemirror-theme-sublime": "^4.11.4",
+    "@uiw/react-codemirror": "^4.11.4",
+    "@uiw/react-md-editor": "^3.14.5",
+    "codemirror": "^5.65.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0"
