--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@uiw/react-codemirror": "^4.11.4",
     "@uiw/react-md-editor": "^3.14.5",
     "codemirror": "^5.65.6",
+    "daisyui": "^2.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0"
