--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@codemirror/highlight": "github:codemirror/highlight",
-    "@codemirror/history": "github:codemirror/history",
-    "@codemirror/lang-markdown": "github:codemirror/lang-markdown",
-    "@codemirror/language-data": "github:codemirror/language-data",
-    "@codemirror/matchbrackets": "github:codemirror/matchbrackets",
+    "@codemirror/autocomplete": "^6.1.0",
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^6.0.1",
+    "@codemirror/lang-markdown": "^6.0.1",
+    "@codemirror/language": "^6.2.1",
+    "@codemirror/language-data": "^6.1.0",
+    "@codemirror/lint": "^6.0.0",
+    "@codemirror/search": "^6.0.1",
     "@codemirror/state": "^6.1.0",
+    "@codemirror/view": "^6.1.2",
+    "@lezer/common": "^1.0.0",
     "@szhsin/react-menu": "^3.1.1",
     "@tauri-apps/api": "^1.0.2",
-    "@uiw/codemirror-theme-sublime": "^4.11.4",
+    "@uiw/codemirror-themes": "^4.11.4",
     "@uiw/react-codemirror": "^4.11.4",
     "@uiw/react-md-editor": "^3.14.5",
-    "codemirror": "^5.65.6",
+    "codemirror": "^6.0.1",
     "daisyui": "^2.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
