--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@uiw/react-md-editor": "^3.14.5",
     "codemirror": "^6.0.1",
     "daisyui": "^2.20.0",
+    "fast-levenshtein": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.4",
+    "@types/fast-levenshtein": "^0.0.2",
     "@types/node": "^18.6.2",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
