--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "fast-levenshtein": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "split-pane-react": "^0.0.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.4",
