--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@codemirror/state": "^6.1.0",
     "@codemirror/view": "^6.1.2",
     "@lezer/common": "^1.0.0",
-    "@remirror/pm": "2.0.0-beta.14",
-    "@remirror/react": "^1.0.43",
-    "@remirror/react-editors": "^0.1.89",
+    "@remirror/extension-heading": "^2.0.3",
+    "@remirror/pm": "^2.0.0",
+    "@remirror/react": "^2.0.4",
     "@szhsin/react-menu": "^3.1.1",
     "@tauri-apps/api": "^1.0.2",
     "@uiw/codemirror-themes": "^4.11.4",
@@ -35,7 +35,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "remirror": "^1.0.89",
+    "remirror": "^2.0.4",
     "split-pane-react": "^0.0.1"
   },
   "devDependencies": {
