--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "remirror": "^2.0.4",
+    "slate": "^0.82.1",
+    "slate-history": "^0.66.0",
+    "slate-react": "^0.83.0",
     "split-pane-react": "^0.0.1"
   },
   "devDependencies": {
