--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fast-levenshtein": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hotkeys-hook": "^4.3.7",
     "react-icons": "^4.4.0",
     "split-pane-react": "^0.0.1"
   },
